0.0.4 (preview 4, 1.12.2)
Added: Quick repair recipe, which replaces decorating
Changed: Crafting materials (upgrade base, rods, sinew) have individual items now, existing ones will disappear
Fixed: Command usage text

0.0.3 (preview 3, 1.12.2)
Added: User-defined materials are now working!
Added: Subcommand to repair held gear
Fixed: Example recipes done right, hopefully
Various minor fixes

0.0.2 (preview 2, 1.12.2)
Added: Missing blueprint recipes for daggers and sickles
Added: Block placing with tools handler. Entirely configurable, you can set literally any item to work with this now. Defaults to Silent Gear pickaxes, shovels, and axes.
Fixed: Example swords having wood guards
Fixed: NoClassDefFoundError crash, jline/internal/InputStreamReader (#1)

0.0.1 (preview 1, 1.12.2)
Initial preview build