@@ -1,5 +1,6 @@
 0.0.4 (preview 4, 1.12.2)
 Added: Quick repair recipe, which replaces decorating
+Changed: Block placing tools now require sneaking (fixes placing blocks when click on blocks with GUIs and such)
 Changed: Crafting materials (upgrade base, rods, sinew) have individual items now, existing ones will disappear
 Fixed: Command usage text
 
